# YIT-GPA-Calculator-Rust

./: Cargo.toml  README.md
assets/: CoursesList.xlsx
src/: business.rs  handler.rs  main.rs  models.rs  router.rs  scraping.rs  utils.rs  web.rs  web_scraping.rs
templates/: base.html  error.html  login.html  result.html
