[package]
name = "YIT-GPA-Calculator-Rust"
version = "0.4.0"
edition = "2024"

# 发布模式的编译配置
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "yit-gpa-tool"
path = "src/main.rs"

[dependencies]
# 基础依赖
axum = "0.8.4"
tokio = {version = "1.46.1", features = ["full"]}  # 异步运行时
tera = "1.20.0"   # 模板引擎
rust-embed = "8.7.2"    # 打包 exe
chrono = "0.4.41"   # 时间戳
rand = "0.9.2"  # 随机生成密钥

# 用于 Session 管理
tower-sessions = { version = "0.14.0", features = ["memory-store"] }
tower-cookies = { version = "0.11.0", features = ["signed"] }

# 网络解析
reqwest = {version = "0.12.22", features = ["json", "cookies", "rustls-tls"]}    # HTTP 客户端
scraper = "0.23.1"    # HTML 解析
base64 = "0.22.1"   # Base64 编码

# 数据序列化与反序列化
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"

# 高精度小数
rust_decimal = {version = "1.30.0", features = ["serde", "std"]}
rust_decimal_macros = "1.30.0"

# 其他工具
webbrowser = "1.0.5"   # 自动打开浏览器
anyhow = "1.0.98"   # 简化错误处理
thiserror = "2.0.12"    # 自定义错误
fake_user_agent = "0.2.2"   # 随机 UA
lazy_static = "1.5.0"   # 将静态变量延时初始化
mime_guess = "2.0.5"    # 自动返回正确的 Content-Type
